# liblouis-env

./: .gitignore  CLAUDE.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: check-js-build-updates.yml  check-liblouis-release.yml  test.yml
js/: package.json  pnpm-lock.yaml
python/: README.md  pixi.toml  pyproject.toml
python/src/liblouis_env/: __init__.py  cli.py  fetch.py
python/tests/: test_fetch.py
src/liblouis_env/: __init__.py  version.py
