[project]
name = "liblouis-env"
version = "0.1.0"
description = "Cross-platform locator/installer for the liblouis lou_translate binary"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
dependencies = [
    "platformdirs>=4.0",
    "requests>=2.32",
]

[project.scripts]
liblouis-fetch = "liblouis_env.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liblouis_env"]
